# espterm-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.combined  Makefile.ota  Makefile.separate  README  README.md  build_demo.sh  build_parser.sh  build_web.sh  compress_html.sh  demo_deploy.sh  esphttpdconfig.mk  esphttpdconfig.mk.example  get_version.c  prepro.sh  programming.md  ship.sh  showmem.php
doc/: espterm-highlight.css  espterm-xterm.html  man2html.css  simplenav15.css
esp_iot_sdk_v1.5.2/include/: eagle_soc.h  esp_sdk_ver.h  espconn.h  espnow.h  osapi.h  ping.h  spi_flash.h  uart_register.h  upgrade.h  user_interface.h
html/: help.tpl  index.html  index.tpl  script.js  style.css  term.tpl  wifi_conn.tpl
html/css/: app.css
html/js/: app.js
html_orig/: .gitignore  _debug_replacements.php  _env.php  _pages.php  _start.php  about.html  base.php  build_html.php  dump_js_lang.php  help.html  index.html  index.php  package-lock.json  package.json  packcss.sh  packjs.sh  script.js  server.sh  style.css  term.html  term_test.php  termtest.html  wifi.html  wifi1.html  wifi_test.php
html_orig/css/: app.css
html_orig/fontello/: unpack.sh
html_orig/img/: adapter.jpg.orig
html_orig/js/: app.js
html_orig/jssrc/: appcommon.js  chibi.js  keymaster.js  lang.js  modal.js  notif.js  soft_keyboard.js  term.js  term_conn.js  term_input.js  term_screen.js  term_upload.js  utils.js  wifi.js
html_orig/lang/: en.php
html_orig/messages/: en.php
html_orig/pages/: _cfg_menu.php  _head.php  _tail.php  about.php  cfg_admin.php  cfg_app.php  cfg_network.php  cfg_system.php  cfg_term.php  cfg_wifi.php  cfg_wifi_conn.php  help.php  term.php
html_orig/pages/help/: charsets.php  cmd_cursor.php  cmd_screen.php  cmd_system.php  input.php  nomenclature.php  screen_behavior.php  sgr_colors.php  sgr_styles.php  troubleshooting.php
html_orig/sass/: _fontello-embedded.scss  _fontello.scss  _grid-settings.scss  _layout.scss  _modal.scss  _normalize.scss  _term-colors.scss  _utils.scss  app.scss
html_orig/sass/form/: _buttons.scss  _fancy_button_mixins.scss  _form_elements.scss  _form_layout.scss  _index.scss  _select.scss
html_orig/sass/layout/: _base.scss  _box.scss  _content.scss  _espterm_specific_old.scss  _index.scss  _loader.scss  _menu.scss  _modal.scss  _outer-wrap.scss
html_orig/sass/lib/bourbon/addons/: _text-inputs.scss
html_orig/sass/pages/: _about.scss  _term.scss  _wifi.scss
html_orig/sass/utils/: _background-tiling.scss  _index.scss  _misc.scss  _pointer.scss
include/: ets_sys_extra.h  helpers.h
rel-tpl/: README.txt  flash.sh
release/: .gitignore
user/: ansi_parser.c  ansi_parser.h  ansi_parser.rl  ansi_parser_callbacks.c  ansi_parser_callbacks.h  apars_csi.c  apars_csi.h  apars_dcs.c  apars_dcs.h  apars_logging.h  apars_osc.c  apars_osc.h  apars_pm.c  apars_pm.h  apars_short.c  apars_short.h  apars_string.c  apars_string.h  apars_utf8.c  apars_utf8.h  api.h  ascii.h  cgi-test.c  cgi-test.h  cgi.c  cgi.h  cgi_appcfg.c  cgi_appcfg.h  cgi_d2d.c  cgi_d2d.h  cgi_logging.h  cgi_main.c  cgi_main.h  cgi_network.c  cgi_network.h  cgi_persist.c  cgi_persist.h  cgi_ping.c  cgi_ping.h  cgi_reset.c  (+49 more)
